LOAD-38716: [As-Code] Fix broken YAML/JSON write serialization in v3 project model (round-trip parity)